--- a/views/bg.ejs
+++ b/views/bg.ejs
@@ -6,18 +6,12 @@
         background-color: #0a0a1a;
         color: #e0e0e0;
         margin: 0;
-        padding: 20px;
+        padding: 0;
+        box-sizing: border-box;
+        background-color: #FFFFFF;
         display: flex;
         flex-direction: column;
         align-items: center;
-      }
-      .container {
-        max-width: 800px;
-        width: 100%;
-        background-color: rgba(255, 255, 255, 0.1);
-        border-radius: 10px;
-        padding: 20px;
-        box-shadow: 0 0 20px rgba(0, 100, 255, 0.3);
       }
       .stars {
         position: fixed;
@@ -31,7 +25,7 @@
     </head>
     <body>
       <svg class="stars" xmlns="http://www.w3.org/2000/svg">
-        <rect width="100%" height="100%" fill="#0a0a1a"/>
+        <rect width="100%" height="100%" fill="#111111"/>
         <g id="stars"></g>
       </svg>
     
