--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,8 +2,9 @@
 <html><head>
   <link rel="stylesheet" href="/style.css">
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
       body {
-        font-family: 'Space Mono', monospace;
+        font-family: 'Space Grotesk', monospace;
         background-color: #0a0a1a;
         color: #e0e0e0;
         margin: 0;
