aa;a;a;;as;f;af;af

--- a/views/spaceguy.ejs
+++ b/views/spaceguy.ejs
@@ -103,7 +103,9 @@
             </div>
         </div>
         <div id="sos">
-            <button id="sosButton">SOS</button>
+            <a href="/spaceguy/sos">
+                <button id="sosButton">SOS</button>
+            </a>
         </div>
     </div>
 </body>
