--- a/views/ai.ejs
+++ b/views/ai.ejs
@@ -2,12 +2,16 @@
 <%- include ./components/navLanding %>
 
 <style>
+body {
+    padding: 0;
+}
 .main{
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-top: 4vw;
-    padding: 0 20vw;
+    padding: 0 20vw !important;
+    width: 100vw;
 }
 #button{
     color: #111;
