--- a/views/junk.ejs
+++ b/views/junk.ejs
@@ -59,7 +59,12 @@
     }
 
     #endtripbutton{
-
+        background-color: #fd532f;
+        font-size: 1.3em;
+        border-radius: 10px;
+        color: black;
+        padding: 10px;
+        cursor: pointer;
     }
 </style>
 <body>
@@ -87,7 +92,7 @@
     <p>Click to lock mouse pointer</p>
     <form action="/spaceguy/clean" method="post">
         <input type="hidden" value="" name="junklist" id="junklist">
-        <button type="submit" id="endtripbutton">End Trip!</button>
+        <button type="submit" id="endtripbutton">End Trip</button>
     </form>
 </div>
 <svg id="crosshair" viewBox="0 0 100 100">
