--- a/views/tracker.ejs
+++ b/views/tracker.ejs
@@ -12,6 +12,7 @@
         .container {
             display: flex;
             height: 100vh;
+            width: 100vw;
         }
 
         #map {
@@ -59,11 +60,6 @@
             border-radius: 50%;
             display: inline-block;
             margin-right: 8px;
-        }
-
-        .emergency {
-            background-color: transparent;
-            border-radius: 12px;
         }
     </style>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
