--- a/views/ai.ejs
+++ b/views/ai.ejs
@@ -136,7 +136,7 @@ body {
                         return
                     }
                     try {
-                        const result = await speakText(response).then(() => {
+                        const result = speakText(response).then(() => {
                             button.innerText = "Do it again"
                             button.disabled = false
                         })
@@ -165,11 +165,11 @@ body {
     })
 
     async function speakText(text) {
-            const response = await fetch('https://api.elevenlabs.io/v1/text-to-speech/IKne3meq5aSn9XLyUdCD', {
+            const response = await fetch('https://api.elevenlabs.io/v1/text-to-speech/EXAVITQu4vr4xnSDxMaL', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'xi-api-key': 'sk_3dc79a1715fe01a3db4fdc00fa6304cedcb10238e7eee5e8' // Replace with your Eleven Labs API key
+                    'xi-api-key': 'sk_d200b7dd2c0d222a8294af7deec3ab28ff22e5bd79727a29' // Replace with your Eleven Labs API key
                 },
                 body: JSON.stringify({
                     text: text,
@@ -182,7 +182,7 @@ body {
             });
 
             if (!response.ok) {
-                console.error('Error:', response.statusText);
+                console.error('Error:', response);
                 return;
             }
 
