--- a/views/tracker.ejs
+++ b/views/tracker.ejs
@@ -1,5 +1,5 @@
-<% layout('layout') -%>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
         body,
         html {
             margin: 0;
@@ -7,6 +7,7 @@
             background-color: #111;
             color: #e0f2ff;
             height: 100%;
+            font-family: 'Space Grotesk';
         }
 
         .container {
@@ -70,7 +71,7 @@
     <div class="container">
         <div id="map"></div>
         <div id="info-panel">
-            <nav><a href="/spaceguy">&#9664; Back to dashboard</a></nav>
+            <nav><a style="text-decoration: none; color: #fff;" href="/spaceguy">&#9664; Back to dashboard</a></nav>
             <h1 style="color: #fd532f;">ISS Tracker</h1>
 
             <div class="info-box">
