--- a/views/sos.ejs
+++ b/views/sos.ejs
@@ -127,6 +127,7 @@
     .trackHead{
         color:#8f8f8f;
         margin-top: 0.5vh;
+        font-size: 1.05vw;
     }
     
     .details{
@@ -145,7 +146,7 @@
 
 <body>
     <nav><a href="/spaceguy">&#8592; Back to dashboard</a></nav>
-    <h1 style="color:#FD532F">SOS Portal</h1>
+    <h1 style="color:#FD532F; margin-top: 5vh;">SOS Portal</h1>
     <div class="trackSos">
         <p class="track">Track SOS</p>
         <div class="details">
