--- a/views/agency.ejs
+++ b/views/agency.ejs
@@ -2,8 +2,8 @@
     <style>
         body {
             display: flex;
+            height: 100vh;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
         }
 
@@ -12,13 +12,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-
-            border-radius: 5px;
-            border: 1px solid #545454;
-            margin-top: 20vh;
-            width: 60vh;
-            padding: 1vmin;
-
+            height: 100%;
         }
 
         #main form {
@@ -51,29 +45,60 @@
         h1 {
             color: #fd532f;
         }
+
+        button {
+            padding: 1vmin;
+            background-color: #fd532f;
+            border-radius: 10px;
+            color: black;
+            border: none;
+            font-weight: bold;
+            cursor: pointer;
+        }
+/* 
+        #code {
+            font-size: 5vh;
+        } */
+
+        #content {
+            width: 30vw;
+            background-color: #111;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 3vh;
+        }
     </style>
-<body>
     <%- include ./components/navLanding %>
+
     <% if (userdata.hasPlan===true) { %>
-        Your secret code, make sure to not share it with anyone, only with your spaceguys
-        <%= userdata.userid %>
+        <div id="main">
+                <div id="content">
+
+                    Here's your agency pass code. <span style="color: #fd532f;">Keep it secret</span> and share only with
+                    your spaceguys.
+                    <div>
+                        <pre id="code"><%= userdata.userid %></pre>
+                    </div>
+                </div>
+            </div>
             <% } %>
 
-                <% if (userdata.hasPlan===false) { %>
-                    <div id="main">
-                        <h1>Buy Agency Pass</h1>
-                        <form action="/agency/buy" method="post">
-                            <p style="color: #ffffff;">Buy a pass for your spaceguy to use as proof of employment. This provides your spaceguy with
-                                access to all the features we have to offer.</p>
-                            <button>Buy a pass</button>
-                            <p>
-                                Already have a pass from your agency? <br>
-                                <a href="/spaceguy/code">Enter it here.</a>
-                            </p>
-                        </form>
+        <% if (userdata.hasPlan===false) { %>
+            <div id="main">
+                <h1>Buy Agency Pass</h1>
+                <form action="/agency/buy" method="post">
+                    <p style="color: #ffffff;">Buy a pass for your spaceguy to use as proof of employment. This provides
+                        your spaceguy with
+                        access to all the features we have to offer.</p>
+                    <button>Buy a pass</button>
+                    <p>
+                        Already have a pass from your agency? <br>
+                        <a href="/spaceguy/code">Enter it here.</a>
+                    </p>
+                </form>
 
-                    </div>
-                    <% } %>
-</body>
-
-</html>
+            </div>
+            <% } %>
+                </div>
