--- a/views/register.ejs
+++ b/views/register.ejs
@@ -60,9 +60,7 @@
         padding: 1.5vmin 2vmin;
         border-radius: 5px;
         font-size: 3vh;
-        font-weight: bold;
-        cursor: pointer;
-        border: none;
+        font-weight: bold;        border: none;
     } 
     
     p {
