--- a/views/junk.ejs
+++ b/views/junk.ejs
@@ -63,9 +63,7 @@
         font-size: 1.3em;
         border-radius: 10px;
         color: black;
-        padding: 10px;
-        cursor: pointer;
-    }
+        padding: 10px;    }
 </style>
 <body>
 <div id="space"></div>
