--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html><head>
   <link rel="stylesheet" href="/style.css">
+  <link rel="shortcut icon" href="/logo.svg" type="image/x-icon">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
       body {
